tests/whiley/valid/test_1173.wyal
type tac2ta is ({int f1, int f2} self)


assert "type invariant not satisfied":
    forall(tac2ta x$1, tac2ta x):
        if:
            x == {f1: 2, f2: 3}
            x == {f1: 2, f2: 3}
            x$1 == x{f1:=1}
        then:
            x$1 is tac2ta


