tests/whiley/invalid/test_146.wyal
type tac2ta is ({int f1, int f2} r)
where:
    r.f1 < r.f2


type tac2tb is ({int f1, int f2} r)
where:
    (r.f1 + 1) < r.f2


assert "type invariant not satisfied":
    forall(tac2ta x, tac2ta x$1):
        if:
            x == {f1: 1, f2: 3}
            x$1 == x{f1:=2}
        then:
            x$1 is tac2tb


